--- a/frontEnd/Jen/accSettings.html
+++ b/frontEnd/Jen/accSettings.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Account Setting</title>
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css">
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </head>
 <body>
 <div class="well">
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs centered">
         <li class="active"><a href="#home">Profile</a></li>
         <li><a href="#address">Address</a></li>
         <li><a href="#payment">Payment Info</a></li>
