--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -1,12 +1,13 @@
 <body>
 
-    <container id="passwordRecovery">
-        <row>
-            <p> Passord Recovery</p>
-        </row>
+    <div class ="container" id="passwordRecovery">
+        <div class="row text-center">
+           <h3> <p> Recover Password</p></h3>
+        </div>
 
-        <row>
-            <col class="col-xs-4 col-md-4">
+        <div class="row">
+            <div class="col-xs-2 col-md-2"></div>
+            <div class="col-xs-8 col-md-8">
             <form>
                 <fieldset class="form-group">
                     <label for="formInput">Enter your email</label>
@@ -14,8 +15,10 @@
                 </fieldset>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-            </col>
-        </row>
+            </div>
+            <div class="col-xs-2 col-md-2"></div>
 
-    </container>
+        </div>
+
+    </div>
 </body>
