--- a/template.html
+++ b/template.html
@@ -14,11 +14,16 @@
 <body>
 
 
-<div style="position:fixed; width: 100%; height: 50px;z-index: 2000; top: 0">
+<div id="User">
     <div class="container-fluid">
         <div class="row">
         <div class="col-xs-3"></div>
-        <div class="col-xs-6" style="text-align: center"><h1>Fetch</h1></div>
+        <div id="Fetch"class="col-xs-6" style="text-align: center">
+            <h1>Fetch</h1>
+            <button class="shop">shopper</button>
+            <button class="drive">driver</button>
+            <button class="home">home</button>
+        </div>
         <div class="col-xs-3">
             <div class="cd-btn btn btn-lg pull-right"><span class="glyphicon glyphicon-user large"></span></div>
         </div>
