modified password pages

--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -13,10 +13,13 @@
                     <label for="formInput">Enter your email</label>
                     <input type="email" class="form-control" id="formInput" placeholder="e-mail">
                 </fieldset>
-                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
             </div>
             <div class="col-xs-2 col-md-2"></div>
+        </div>
+
+        <div class ="row text-center">
+            <button type="submit" class="btn btn-primary">Submit</button>
 
         </div>
 
