--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -5,13 +5,13 @@
             <div class="col-xs-8 col-md-8">
                 <form>
                     <fieldset class="form-group">
-                        <label for="pass1">pass1</label>
-                        <input type="password" class="form-control" id="pass1" placeholder="Enter password">
+                        <label for="pass1"></label>
+                        <input type="password" class="form-control" id="pass1" placeholder="Enter New Password">
                     </fieldset>
                     <fieldset class="form-group">
-                        <label for="pass2">pass2</label>
+                        <label for="pass2"></label>
                         <!--<input type="password" class="form-control" id="pass2" placeholder="Re-enter password">-->
-                        <input type="password" class="form-control" name="pass2" id="pass2" placeholder="Re-enter password" onkeyup="checkPass(); return false;" >
+                        <input type="password" class="form-control" name="pass2" id="pass2" placeholder="Re-enter Password" onkeyup="checkPass(); return false;" >
                         <span id="confirmMessage" class="confirmMessage"></span>
                     </fieldset>
                 </form>
