--- a/_signUp.html
+++ b/_signUp.html
@@ -1,8 +1,8 @@
 
 <body>
-
+<link rel="stylesheet" href="scss/_login.scss">
 <div class="container">
-    <h2 class="form-signin-heading" style="font-size:150% ">Fetch Sign-Up</h2>
+    <h2 class="form-signin-heading">Fetch Sign-Up</h2>
     <input type="text" class="form-control" name="Email" placeholder="User Email" required="" autofocus="" />
     <br>
     <input type="text" class="form-control" name="username" placeholder="User Name" required="" autofocus="" />
