putting the template toghether

--- a/template.html
+++ b/template.html
@@ -20,9 +20,9 @@
         <div class="col-xs-3"></div>
         <div id="Fetch"class="col-xs-6" style="text-align: center">
             <h1>Fetch</h1>
-            <button class="shop">shopper</button>
-            <button class="drive">driver</button>
-            <button class="home">home</button>
+            <button onclick="window.location.href='/_shopping.html'"class="shop">shopper</button>
+            <button onclick="window.location.href='/_driverList.html'"class="drive">driver</button>
+            <button onclick="window.location.href='/_homePage.html'" class="home">home</button>
         </div>
         <div class="col-xs-3">
             <div class="cd-btn btn btn-lg pull-right"><span class="glyphicon glyphicon-user large"></span></div>
@@ -46,7 +46,11 @@
 
     <div class="cd-panel-container">
         <div class="cd-panel-content">
+            <div>
+            <button onclick="window.location.href='/_login.html'"class="log" style="color:red; margin-top:100px;">Loging</button>
+            <button onclick="window.location.href='/_signUp.html'"class="sign"style="color:red;">Sign-Up</button>
 
+            </div>
         </div> <!-- cd-panel-content -->
     </div> <!-- cd-panel-container -->
 </div> <!-- cd-panel -->
