making little tweaks to password and homePage

--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -1,6 +1,6 @@
 <body>
 
-    <div class ="container" id="passwordRecovery">
+    <div class ="container-fluid" id="passwordRecovery">
         <div class="row text-center">
            <h3> <p> Recover Password</p></h3>
         </div>
