--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -1,5 +1,5 @@
 <body>
-    <div class = "container" id="passwordReset">
+    <div class = "container-fluid" id="passwordReset">
         <div class="row">
             <div class="col-xs-2 col-md-2"></div>
             <div class="col-xs-8 col-md-8">
