more update on template

--- a/template.html
+++ b/template.html
@@ -24,7 +24,7 @@
             <button onclick="window.location.href='/_driverList.html'"class="drive">driver</button>
             <button onclick="window.location.href='/_homePage.html'" class="home">home</button>
         </div>
-        <div class="col-xs-3">
+        <div id="Glyph" class="col-xs-3">
             <div class="cd-btn btn btn-lg pull-right"><span class="glyphicon glyphicon-user large"></span></div>
         </div>
         </div>
@@ -32,7 +32,7 @@
 </div>
 
 
-<div id="page-content" style="margin-top: 100px;">
+<div id="page-content" style="margin-top: 200px;">
     <!--DO NOT CHANGE THIS COMMENT-->
     <!--body content is inserted here for now. Eventually will be very different and animated.-->
 
@@ -47,8 +47,15 @@
     <div class="cd-panel-container">
         <div class="cd-panel-content">
             <div>
-            <button onclick="window.location.href='/_login.html'"class="log" style="color:red; margin-top:100px;">Loging</button>
-            <button onclick="window.location.href='/_signUp.html'"class="sign"style="color:red;">Sign-Up</button>
+                <button onclick="window.location.href='/_login.html'"class="log" style="color:red; margin-top:100px;">Loging</button>
+                <button onclick="window.location.href='/_signUp.html'"class="sign"style="color:red;">Sign-Up</button>
+                <button onclick="window.location.href='/_passwordRecovery.html'"class="sign"style="color:red;">Password Recovery</button>
+                <button onclick="window.location.href='/_passwordReset.html'"class="sign"style="color:red;">Password Reset</button>
+                <button onclick="window.location.href='/_rating.html'"class="sign"style="color:red;">Rating</button>
+                <button onclick="window.location.href='/_tickets.html'"class="sign"style="color:red;">Tickets</button>
+                <button onclick="window.location.href='/_congrats.html'"class="sign"style="color:red;">Congrats</button>
+                <button onclick="window.location.href='/_checkout.html'"class="sign"style="color:red;">Checkout</button>
+                <button onclick="window.location.href='/_accSetting.html'"class="sign"style="color:red;">Setting</button>
 
             </div>
         </div> <!-- cd-panel-content -->
