--- a/_homePage.html
+++ b/_homePage.html
@@ -4,31 +4,35 @@
 <section class="container-fluid text-center page " id="homePage">
 
     <div class="row ">
+        <a href="/_shopping.html">
         <figure class="col-xs-12 col-md-6" id="Vons">
             <button class="shop">
                 <img src="/resources/images/food1.jpg"/>
                 <h2 class="name"> VONS </h2></button>
-        </figure>
+        </figure></a>
 
+        <a href="/_shopping.html">
         <figure class="col-xs-12 col-md-6" id="Joe">
             <button class="shop">
                 <img src="/resources/images/food2.jpg"/>
                 <h2 class="name"> TJ's</h2></button>
-        </figure>
+        </figure></a>
     </div>
 
     <div class="row ">
+        <a href="/_shopping.html">
         <figure class="col-xs-12 col-md-6 " id="Ralph">
             <button class="shop">
                 <img src="/resources/images/food3.jpg"/>
                 <h2 class="name"> Ralph's</h2></button>
-        </figure>
+        </figure></a>
 
+        <a href="/_shopping.html">
         <figure class="col-xs-12 col-md-6" id="WF">
             <button class="shop">
                 <img src="/resources/images/food4.jpg"/>
                 <h2 class="name"> Whole Foods</h2></button>
-        </figure>
+        </figure></a>
     </div>
 
 </section>
