--- a/_accSetting.html
+++ b/_accSetting.html
@@ -45,6 +45,7 @@
                             <div>
                                 <button class="btn btn-primary">Update</button>
                             </div>
+                        </div>
                     </form>
                 </div>
             </div>
