--- a/_homePage.html
+++ b/_homePage.html
@@ -1,33 +1,33 @@
 <body>
 
 
-<section class="container-fluid text-center page " id="homePage">
+<section class="container text-center page " id="homePage">
 
     <div class="row ">
         <figure class="col-xs-12 col-md-6" id="Vons">
-            <button class="shop">
+            <div class="shop">
                 <img src="/resources/images/food1.jpg"/>
-                <h2 class="name"> VONS </h2></button>
+                <h2 class="name"> VONS </h2></div>
         </figure>
 
         <figure class="col-xs-12 col-md-6" id="Joe">
-            <button class="shop">
+            <div class="shop">
                 <img src="/resources/images/food2.jpg"/>
-                <h2 class="name"> TJ's</h2></button>
+                <h2 class="name"> TJ's</h2></div>
         </figure>
     </div>
 
     <div class="row ">
         <figure class="col-xs-12 col-md-6 " id="Ralph">
-            <button class="shop">
+            <div class="shop">
                 <img src="/resources/images/food3.jpg"/>
-                <h2 class="name"> Ralph's</h2></button>
+                <h2 class="name"> Ralph's</h2></div>
         </figure>
 
         <figure class="col-xs-12 col-md-6" id="WF">
-            <button class="shop">
+            <div class="shop">
                 <img src="/resources/images/food4.jpg"/>
-                <h2 class="name"> Whole Foods</h2></button>
+                <h2 class="name"> Whole Foods</h2></div>
         </figure>
     </div>
 
