--- a/_rating.html
+++ b/_rating.html
@@ -6,43 +6,47 @@
 </head>
 <body>
 <div id="rating-page">
-    <!--&lt;!&ndash; Im using Materializecss because im more familiar with itatm; bootstrap would work as a mostly drop in replacement&ndash;&gt;-->
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">-->
-    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-
-
-
     <div class="container">
         <div class="row">
-            <div class="col s12 m8 offset-m2 l6 offset-l3">
+            <div class="col-xs-12 col-m-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 <h2 id="user-name" data-id="5876">User Name</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col s8 offset-s2 m6 offset-m3 l4 offset-l4">
+            <div class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                 <img id="user-image" src="/placeholder/person.png"/>
             </div>
         </div>
         <div class="row">
-            <div class="col s12 m8 offset-m2 l6 offset-l3">
+            <div class="col-xs-12 col-m-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 <div class="rating">
-                    <i id="rating-1" class="material-icons medium">star_rate</i>
-                    <i id="rating-2" class="material-icons medium">star_rate</i>
-                    <i id="rating-3" class="material-icons medium">star_rate</i>
-                    <i id="rating-4" class="material-icons medium">star_rate</i>
-                    <i id="rating-5" class="material-icons medium">star_rate</i>
+                    <span id="rating-1" class="glyphicon glyphicon-star"></span>
+                    <span id="rating-2" class="glyphicon glyphicon-star"></span>
+                    <span id="rating-3" class="glyphicon glyphicon-star"></span>
+                    <span id="rating-4" class="glyphicon glyphicon-star"></span>
+                    <span id="rating-5" class="glyphicon glyphicon-star"></span>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col s12 m8 offset-m2 l6 offset-l3">
-                <a id="rate-user" class="waves-effect waves-light btn" >Rate!</a>
+            <div class="col-xs-12 col-m-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+                <button id="rate-user" type="button" class="btn-block btn-lg btn-primary">
+                    Rate!
+                </button>
             </div>
         </div>
         <div class="row">
-            <div class="col s12 m8 offset-m2 l6 offset-l3">
-                <a id="simulate-load-user" class="waves-effect waves-light btn">Simulate loading
-                    actual user</a>
+            <div class="col-xs-12 col-m-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+                <button id="rate-skip" type="button" class="btn-block btn-lg btn-primary">
+                    Skip
+                </button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-m-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+                <button id="simulate-load-user" type="button" class="btn-block btn-lg btn-primary">
+                    Simulate loading actual user
+                </button>
             </div>
         </div>
     </div>
@@ -57,7 +61,7 @@
         var info_to_send = {};
 
 
-        var rating = 0;
+        var _rating = 0;
         var r1 = $('#rating-1'), r2 = $('#rating-2'), r3 = $('#rating-3'), r4 = $('#rating-4'), r5 = $('#rating-5');
         r1.hover(function () {
             r1.addClass("selected");
@@ -107,10 +111,10 @@
                 info_to_send.rating = _rating;
                 alert(JSON.stringify(info_to_send));
                 /*$.ajax({
-                    type: "POST",
-                    url: "/rate",
-                    data: info_to_send
-                })*/
+                 type: "POST",
+                 url: "/rate",
+                 data: info_to_send
+                 })*/
             }
         });
 
