--- a/_homePage.html
+++ b/_homePage.html
@@ -1,42 +1,38 @@
 <body>
 
 
-<section class="container text-center page " id="homePage">
+<section class="container-fluid text-center page " id="homePage">
 
     <div class="row ">
         <a href="/_shopping.html">
             <figure class="col-xs-12 col-md-6" id="Vons">
-                <div class="shop">
+                <button class="shop">
                     <img src="/resources/images/food1.jpg"/>
-                    <h2 class="name"> VONS </h2></div>
-            </figure>
-        </a>
+                    <h2 class="name"> VONS </h2></button>
+            </figure></a>
 
         <a href="/_shopping.html">
             <figure class="col-xs-12 col-md-6" id="Joe">
-                <div class="shop">
+                <button class="shop">
                     <img src="/resources/images/food2.jpg"/>
-                    <h2 class="name"> TJ's</h2></div>
-            </figure>
-        </a>
+                    <h2 class="name"> TJ's</h2></button>
+            </figure></a>
     </div>
 
     <div class="row ">
         <a href="/_shopping.html">
             <figure class="col-xs-12 col-md-6 " id="Ralph">
-                <div class="shop">
+                <button class="shop">
                     <img src="/resources/images/food3.jpg"/>
-                    <h2 class="name"> Ralph's</h2></div>
-            </figure>
-        </a>
+                    <h2 class="name"> Ralph's</h2></button>
+            </figure></a>
 
         <a href="/_shopping.html">
             <figure class="col-xs-12 col-md-6" id="WF">
-                <div class="shop">
+                <button class="shop">
                     <img src="/resources/images/food4.jpg"/>
-                    <h2 class="name"> Whole Foods</h2></div>
-            </figure>
-        </a>
+                    <h2 class="name"> Whole Foods</h2></button>
+            </figure></a>
     </div>
 
 </section>
@@ -44,3 +40,4 @@
 
 <script type='text/javascript' src='/js/_homePage.js'></script>
 </body>
+
