--- a/template.html
+++ b/template.html
@@ -32,7 +32,7 @@
 </div>
 
 
-<div id="page-content" style="margin-top: 50px;">
+<div id="page-content">
     <!--DO NOT CHANGE THIS COMMENT-->
     <!--body content is inserted here for now. Eventually will be very different and animated.-->
 
