Fixed all css collisions. Refactored lots of code with regards to bootstrap layout and removing unnecessary custom css

--- a/_checkout.html
+++ b/_checkout.html
@@ -1,6 +1,6 @@
 <body>
 <div id="checkout">
-    <div class="container-fluid row" style="text-align: center">
+    <div class="container-fluid text-center row" >
         <div class="col-xs-12">
             <h1>Checkout</h1>
 
@@ -75,7 +75,5 @@
         </div>
     </div>
 </div>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
