--- a/_shopping.html
+++ b/_shopping.html
@@ -1,39 +1,24 @@
 <body>
-<div id="shopping">
-    <div class="container-fluid ">
-        <div class="row">
-            <div class="col-xs-12">
-                <h1>Shopping List</h1>
-                <div id="box">
-                    <div id="list">
-                        <form name="form">
-                <span><input class="input" type="text" name="checkListItem" placeholder="What do you need?"
-                             autocomplete="off"
-                             autofocus/></span>
-                        </form>
-                    </div>
-                    <div class="todo-footer">
-                        <strong><span class="count-todos"></span></strong>
-                        <div id="container">
-                            <div id="item"></div>
-                            <div id="sub-div">
-                                <button type="button" class="btn btn-link" id="sub" data-toggle="modal"
-                                        data-target="#myModal">
-                                    Submit
-                                </button>
-                                </span></a></div>
-                            <div id="placeholder"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer2"></div>
-                <div class="footer3"></div>
+<div class="container" id="shopping">
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>Shopping List</h1>
+            <form name="form">
+                <input class="input" type="text" name="checkListItem" placeholder="What do you need?"
+                       autocomplete="off"
+                       autofocus/>
+            </form>
+            <div id="list">
             </div>
+            <div id="item"></div>
+            <button type="button" class="btn btn-link" id="sub" data-toggle="modal"
+                    data-target="#myModal">
+                Submit
+            </button>
         </div>
     </div>
 </div>
-</div>
+
 
 <script src="js/_shopping.js"></script>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </body>
