--- a/_login.html
+++ b/_login.html
@@ -1,20 +1,18 @@
-
 <body>
 
 <div class="container">
-    <h2 class="form-signin-heading">Fetch Login</h2>
-    <input type="text" class="form-control" name="username" placeholder="User Name" required="" autofocus="" />
-    <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
-    <div class="checkbox" style="width:100%">
-        <label style="width:100%">
-        <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
-        </label>
+    <div class="row text-center">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
+            <h2 class="form-signin-heading">Fetch Login</h2>
+            <input type="text" class="form-control" name="username" placeholder="User Name" required="" autofocus=""/>
+            <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
+            <div class="checkbox">
+                <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        </div>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
 </div>
-
-
-
 
 
 </body>
