--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -1,27 +1,14 @@
 <body>
 
-    <div class ="container-fluid" id="passwordRecovery">
-        <div class="row text-center">
-           <h3> <p> Recover Password</p></h3>
-        </div>
+<div class="container-fluid" id="passwordRecovery">
 
-        <div class="row">
-            <div class="col-xs-2 col-md-2"></div>
-            <div class="col-xs-8 col-md-8">
-            <form>
-                <fieldset class="form-group">
-                    <label for="formInput">Enter your email</label>
-                    <input type="email" class="form-control" id="formInput" placeholder="e-mail">
-                </fieldset>
-            </form>
-            </div>
-            <div class="col-xs-2 col-md-2"></div>
-        </div>
-
-        <div class ="row text-center">
+    <div class="row text-center">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
+            <h2>Recover Password</h2>
+            <label for="formInput">Enter your email</label>
+            <input type="email" class="form-control" id="formInput" placeholder="e-mail">
             <button type="submit" class="btn btn-primary">Submit</button>
-
         </div>
-
     </div>
+</div>
 </body>
