--- a/_rating.html
+++ b/_rating.html
@@ -6,19 +6,12 @@
 </head>
 <body>
 <div id="rating-page">
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
-            <div class="col-xs-12 col-m-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
                 <h2 id="user-name" data-id="5876">User Name</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+
                 <img id="user-image" src="/placeholder/person.png"/>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-m-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 <div class="rating">
                     <span id="rating-1" class="glyphicon glyphicon-star"></span>
                     <span id="rating-2" class="glyphicon glyphicon-star"></span>
@@ -26,31 +19,19 @@
                     <span id="rating-4" class="glyphicon glyphicon-star"></span>
                     <span id="rating-5" class="glyphicon glyphicon-star"></span>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-m-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 <button id="rate-user" type="button" class="btn-block btn-lg btn-primary">
                     Rate!
                 </button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-m-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 <button id="rate-skip" type="button" class="btn-block btn-lg btn-primary">
                     Skip
                 </button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-m-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 <button id="simulate-load-user" type="button" class="btn-block btn-lg btn-primary">
                     Simulate loading actual user
                 </button>
+
             </div>
         </div>
     </div>
-
     <script>
 
         var simulated_user = {
