--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -1,6 +1,6 @@
 <body>
     <div class = "container-fluid" id="passwordReset">
-        <div class="row">
+        <div class="row one">
             <div class="col-xs-2 col-md-2"></div>
             <div class="col-xs-8 col-md-8">
                 <form>
@@ -8,6 +8,14 @@
                         <label for="pass1"></label>
                         <input type="password" class="form-control" id="pass1" placeholder="Enter New Password">
                     </fieldset>
+                </form>
+            </div>
+            <div class="col-xs-2 col-md-2"></div>
+        </div>
+        <div class="row two">
+            <div class="col-xs-2 col-md-2"></div>
+            <div class="col-xs-8 col-md-8">
+                <form>
                     <fieldset class="form-group">
                         <label for="pass2"></label>
                         <!--<input type="password" class="form-control" id="pass2" placeholder="Re-enter password">-->
@@ -18,7 +26,7 @@
             </div>
             <div class="col-xs-2 col-md-2"></div>
         </div>
-        <div class="row text-center">
+        <div class="row three text-center">
             <button type="submit" class="btn btn-primary" id="submit">submit</button>
         </div>
 
